# fast_madr

./: README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 434d09a7f751_tabela_usuario_com_username_unico.py  da6f4275dcbc_primeira_migracao_ja_com_a_tabela_.py
fast_madr/: database.py  main.py  model.py  models.py
fast_madr/routers/: books.py  users.py
tests/: conftest.py  test_main.py
